--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -12,7 +12,12 @@
   <div class="card-body p-3">
     <form class="row g-2 align-items-center" method="get" action="{{ url_for('jobs_table') }}" hx-get="{{ url_for('jobs_table') }}" hx-target="#jobs-table" hx-push-url="true">
       <div class="col-md-4">
-        <input class="form-control" type="search" name="search" placeholder="Quick search..." value="{{ search_query }}">
+        <input class="form-control" type="search" name="search" placeholder="Quick search..." value="{{ search_query }}"
+          hx-get="{{ url_for('jobs_table') }}"
+          hx-trigger="keyup changed delay:400ms"
+          hx-target="#jobs-table"
+          hx-push-url="true"
+          hx-params="*">
       </div>
       <div class="col-auto">
         <button class="btn btn-outline-primary" type="submit"><i class="bi bi-search"></i> Search</button>
@@ -68,8 +73,12 @@
   </div>
 </div>
 #}
-<div id="jobs-table" hx-target="this">
-  {% include 'jobs_table.html' %}
+<div class="card shadow-sm">
+  <div class="card-body p-0">
+    <div id="jobs-table" hx-target="this">
+      {% include 'jobs_table.html' %}
+    </div>
+  </div>
 </div>
 <div id="jobs-error" class="mt-2"></div>
 {% endblock %} 
